Changed some things to be a bit more future proof, made it so you have to register your user id to be able to stop BoomBot (so admin for one guild doesn't close BoomBot for another).