@@ -3,17 +3,21 @@ package net.lomeli.boombot.addons.discovery;
 import com.google.common.collect.Lists;
 
 import java.io.File;
+import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.util.Enumeration;
 import java.util.List;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
 
 import net.lomeli.boombot.BoomBot;
 import net.lomeli.boombot.addons.AddonContainer;
 import net.lomeli.boombot.addons.exceptions.WrongBoomBotVersion;
 import net.lomeli.boombot.helper.AddonHelper;
-import net.lomeli.boombot.helper.Logger;
+import net.lomeli.boombot.logging.BoomLogger;
 
 public class AddonCandidate {
     private File addonPath;
@@ -27,30 +31,49 @@ public class AddonCandidate {
     }
 
     public void findAddons(AddonLoader addonLoader) {
+        if (addonFile == null) return;
         try {
-            URL url = addonFile.toURI().toURL();
-            ClassLoader loader = new URLClassLoader(new URL[]{url});
-            List<String> classNames = Lists.newArrayList();
-            List<Class> classes = Lists.newArrayList();
-            if (type == AddonType.DIR)
+            BoomLogger.debug(addonFile.getAbsolutePath());
+            if (type == AddonType.JAR) {
+                JarFile jarFile = new JarFile(addonFile.getCanonicalPath());
+                Enumeration<JarEntry> e = jarFile.entries();
+                URL[] urls = {new URL("jar:file:" + addonFile.getCanonicalPath() + "!/")};
+                ClassLoader loader = URLClassLoader.newInstance(urls);
+                while (e.hasMoreElements()) {
+                    JarEntry je = e.nextElement();
+                    if (je.isDirectory() || !je.getName().endsWith(".class"))
+                        continue;
+                    String className = je.getName().substring(0, je.getName().length() - 6);
+                    className = className.replace('/', '.');
+                    BoomLogger.debug(className);
+                    Class cl = loader.loadClass(className);
+                    if (AddonHelper.isAddonClass(cl)) {
+                        addonLoader.addContainer(new AddonContainer(cl));
+                        break;
+                    }
+                }
+            } else {
+                URL url = addonFile.toURI().toURL();
+                ClassLoader loader = new URLClassLoader(new URL[]{url});
+                List<String> classNames = Lists.newArrayList();
+                List<Class> classes = Lists.newArrayList();
                 classNames.addAll(AddonHelper.getClassesInPath(addonFile, addonPath));
-            else
-                classNames.addAll(AddonHelper.getClassesInFile(addonFile));
-            classes.addAll(AddonHelper.findAddonClass(classNames, loader));
-            for (Class cl : classes)
-                addonLoader.addContainer(new AddonContainer(cl));
+                classes.addAll(AddonHelper.findAddonClass(classNames, loader));
+                for (Class cl : classes)
+                    addonLoader.addContainer(new AddonContainer(cl));
+            }
+        } catch (IOException ex) {
+
         } catch (ClassNotFoundException ex) {
-            Logger.error("Failed to load addon %s", ex, addonFile);
+            BoomLogger.error("Failed to load addon %s", ex, addonFile);
         } catch (IllegalAccessException ex) {
-            Logger.error("Could not access addon class in %s", ex, addonFile.getName());
+            BoomLogger.error("Could not access addon class in %s", ex, addonFile.getName());
         } catch (InstantiationException ex) {
-            Logger.error("Initiate addon %s", ex, addonFile.getName());
-        } catch (MalformedURLException ex) {
-            Logger.error("Failed to load file %s", ex, addonFile.getName());
+            BoomLogger.error("Initiate addon %s", ex, addonFile.getName());
         } catch (InvocationTargetException ex) {
-            Logger.error("Could not access addon info in %s", ex, addonFile.getName());
+            BoomLogger.error("Could not access addon info in %s", ex, addonFile.getName());
         } catch (WrongBoomBotVersion ex) {
-            Logger.error("Failed to load addon %s", ex, addonFile.getName());
+            BoomLogger.error("Failed to load addon %s", ex, addonFile.getName());
             BoomBot.shutdownBoomBot();
         }
     }
